[package]
name = "wahp-server"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wahp-core = { path = "../wahp-core" }

wasmer = "1.0"

tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
